Add documenation for configuratio deploy
Summary:
Documents configuration deploy.

Task: SWARM-641

Test Plan: make docs

Reviewers: cwallin, anu

Reviewed By: cwallin, anu

Differential Revision: https://phabricator.td.teradata.com/D670